[package]
name = "prp_pre"
version = "0.1.0"
authors = ["Felix Buehler <account@buehler.rocks>"]
edition = "2018"

[dependencies]
bincode = "1.3"
clap = "2.33"
mch = { git = "https://github.com/Lesstat/mch.git", branch = "main" }
ordered-float = "2.1"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
