[package]
name = "prp_pre"
version = "0.1.0"
authors = ["Felix Buehler <account@buehler.rocks>"]
edition = "2018"

[dependencies]
bincode = "1.3"
clap = { version = "4.4", features = ["cargo"] }
crossbeam-channel = "0.5"
mch = { path = "./mch" }
num_cpus = "1.13"
ordered-float = "4.1"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
