[package]
name = "prp_query"
version = "0.1.0"
authors = ["Felix Buehler <account@buehler.rocks>"]
edition = "2018"

[dependencies]
actix-files = "0.5"
actix-web = "3.3"
bincode = "1.3"
clap = "2.33"
env_logger = "0.8"
log = "0.4"
mch = { path = "../pre/mch" }
ordered-float = "2.1"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }


[[bin]]
name = "prp_web"

[[bin]]
name = "prp_eval"
