[package]
name = "prp_query"
version = "0.1.0"
authors = ["Felix Buehler <account@buehler.rocks>"]
edition = "2018"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
bincode = "1.3"
clap = { version = "4.3", features = ["cargo"] }
env_logger = "0.10"
log = "0.4"
mch = { path = "../pre/mch" }
ordered-float = "3.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }


[[bin]]
name = "prp_web"

[[bin]]
name = "prp_eval"
